--- a/scripts/ee_cph_model.Rmd
+++ b/scripts/ee_cph_model.Rmd
@@ -17,9 +17,9 @@ library(car)
 library(broom)
 library(AICcmodavg)
 
-library(sjPlot)
-library(sjmisc)
-library(sjlabelled) 
+# library(sjPlot)
+# library(sjmisc)
+# library(sjlabelled) 
 ```
 
 # Data
@@ -249,6 +249,7 @@ mod4.1 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat +
                 data = eelife)
 summary(mod4.1)
 cox.zph(mod4.1) # PH
+anova(mod4.1)
 
 mod4.2 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
                   larv_adult, data = eelife)
