--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -23,6 +23,7 @@ library(tidyverse)
 library(forcats)
 library(cowplot)
 library(colorblindr)
+library(visR)
 #library(Greg)
 
 
@@ -94,7 +95,7 @@ mp <- survfit(Surv(age, status) ~ larvalTreat + adultTreat,
                    error = "greenwood",
                    data = eelife)
 
-mp.plot <- ggsurvplot(mf, data = eelife, 
+mp.plot <- ggsurvplot(mp, data = eelife, 
                      conf.int = FALSE,
                      break.time.by = 30,
                      #palette = "palette_OkabeIto",
@@ -123,6 +124,10 @@ mp.plot
 
 ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_fullModel_with_RiskTable_All.pdf", height=6, width=6, print(mp.plot))
 
+quantile(mp,  probs = c(0.1, 0.5, 0.9))
+mp.quant <- visR::get_quantile(mp)
+#summary(mp,probs=c(0.9,0.5,0.1))
+summary(mp,times=c(1,2,3))
 ```
 
 
