--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -126,8 +126,15 @@ mp.plot
 
 ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_fullModel_with_RiskTable_All.pdf", height=6, width=6, print(mp.plot))
 
+survdiff(Surv(age) ~larvalTreat + adultTreat, 
+                     data = eelife, rho = 0) 
+
 quantile(mp,  probs = c(0.1, 0.5, 0.9))
 mp.quant <- visR::get_quantile(mp)
+
+mps <- surv_fit(Surv(age, status) ~ larvalTreat + adultTreat,
+                   data = eelife,group.by="sex")
+surv_pvalue(mps)
 
 # Extract summary table at interesting probabilities
 mpsum <- summary(mp,probs=c(0.1,0.5,0.9))
