--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -64,7 +64,7 @@ eelife <- na.omit(eelife)
 
 eelife$status <- ifelse(eelife[,"status"] == 2, 1, 0)
 
-#write.csv(eelife, file="../processed/eeAlldat.csv, row.names = FALSE")
+write.csv(eelife, file="../processed/eeAlldat.csv, row.names = FALSE")
 ```
 
 # Testing developmental theories
@@ -102,11 +102,12 @@ summary(mp)$table[, "median"]
 
 mp.plot <- ggsurvplot(mp, data = eelife, 
                      conf.int = FALSE,
-                     break.time.by = 30,
+                     break.time.by = 20,
                      #palette = "palette_OkabeIto",
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
+                     pval = TRUE,
                      surv.median.line = "hv",
                      fontsize = 4.5,
                      font.x = 14,
@@ -127,7 +128,7 @@ mp.plot <- ggsurvplot(mp, data = eelife,
   xlab("Age (days)")
 mp.plot
 
-ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_fullModel_with_RiskTable_All.pdf", height=6, width=6, print(mp.plot))
+ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_fullModel_with_RiskTable_All.pdf", height=6, width=6, plot=mp.plot)
 
 survdiff(Surv(age) ~larvalTreat + adultTreat, 
                      data = eelife, rho = 0) 
@@ -139,13 +140,26 @@ mps <- surv_fit(Surv(age, status) ~ larvalTreat + adultTreat,
                    data = eelife,group.by="sex")
 surv_pvalue(mps)
 
+mpc <- surv_fit(Surv(age, status) ~ sex,
+                   data = eelife,group.by="larv_adult")
+surv_pvalue(mpc)
+
 # Extract summary table at interesting probabilities
 mpsum <- summary(mp,probs=c(0.1,0.5,0.9))
 #summary(mp,times=c(1,2,3))
+
+ggsave(jx,file = "~/MyGithub/early_experience/plots/Quantplots_thumbnail.pdf",
+  width = 4,
+  height = 2)
 ```
 
 ##################
 ```{r}
+mp <- survfit(Surv(age, status) ~ larvalTreat + adultTreat,
+                  group_by = "sex",
+                   data = eelife)
+
+mpsum <- summary(mp,probs=c(0.1,0.5,0.9))
 cols <- lapply(c(2:7, 10,15:16) , function(x) mpsum[x])
 mptab <- do.call(data.frame, cols)
 mptab$surv <- round(mptab$surv,digits = 1)
@@ -155,9 +169,87 @@ mpfilt <- subset(mptab, surv %in% c(0.9,0.5,0.1))
 mpfilt$strata <- gsub(",[^=]+=", "_",mpfilt$strata) # remove everything between ',' and '=', add '_'
 mpfilt$Diet <- gsub(".*=","",mpfilt$strata) # remove everything before '='
 
+```
+###################
+
+```{r}
+mf <- survfit(Surv(age, status) ~ larvalTreat + adultTreat + sex,
+                   conf.type = "log", 
+                   conf.int = 0.95,
+                   type = "kaplan-meier",
+                   error = "greenwood",
+                   data = eelife)
+#summary(mf)
+summary(mf)$table[, "median"]
+#sum_survfit <- surv_summary(mf, data = eelife)
+
+write.csv(sum_survfit, 
+          file = "../processed/SummarySurvModel_larvAdulSex.csv",
+          row.names = FALSE) 
+
+# Write quantiles
+write.csv(quantile(mf, probs = c(0.25, 0.5, 0.75)), 
+          file = "../processed/quantiles.csv")
+
+# OkabeIto palette in Hex: "#000000","#E69F00","#56B4E9",
+# "#009E73", #F0E442","#0072B2","#D55E00","#CC79A7"
+
+mf.plot <- ggsurvplot(mf, data = eelife, 
+                     conf.int = FALSE,
+                     break.time.by = 20,
+                     #palette = "palette_OkabeIto",
+                     palette = c("#999999", "#E69F00", "#56B4E9", "#009E73", 
+                       "#F0E442", "#0072B2", "#D55E00", "#CC79A7"),
+                     fun = "pct", 
+                     surv.median.line = "hv",
+                     #fontsize = 3.5,
+                     #font.main = 3.5,
+                     #font.x = 12,
+                     #font.y = 12,
+                     # font.tickslab = 11,
+                     pval = TRUE,
+                     #font.main = 12,
+                     legend = c(0.9, 0.6),
+                     risk.table = TRUE,
+                     risk.table.col = "strata",
+                     risk.table.fontsize = 3.5,
+                     tables.height = 0.35,
+                     tables.theme = theme_cleantable(),
+                    # title = "Females & Males",
+                     legend.labs = c("C-C-F","C-C-M",
+                                     "C-DR-F","C-DR-M",
+                                     "DR-C-F","DR-C-M",
+                                     "DR-DR-F","DR-DR-M"),
+                     legend.title = "Diet-Sex \n combination") +
+                     guides(colour = guide_legend(nrow = 8)) +
+                     xlab("Age (days)")
+mf.plot
+
+
+ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_fullModel_with_RiskTable_Sex.png", last_plot(),device = "png")
+
+# Test significance
+survdiff(Surv(age) ~larvalTreat+adultTreat+sex,
+                     data = eelife, rho = 0) 
+
+quantile(mf,  probs = c(0.1, 0.5, 0.9))
+```
+
+##################
+```{r}
+mfsum <- summary(mf,probs=c(0.1,0.5,0.9))
+cols <- lapply(c(2:7, 10,15:16) , function(x) mfsum[x])
+mftab <- do.call(data.frame, cols)
+mftab$surv <- round(mftab$surv,digits = 1)
+head(mftab)
+
+mfilt <- subset(mftab, surv %in% c(0.9,0.5,0.1))
+mfilt$strata <- gsub(",[^=]+=", "_",mfilt$strata) # remove everything between ',' and '=', add '_'
+mfilt$Diet <- gsub(".*=","",mfilt$strata) # remove everything before '='
+
 # Aggregate by treatment
 #mpfilt$strata <- as.factor(mpfilt$strata)
-mpeval <- mpfilt %>%
+mfeval <- mfilt %>%
   group_by(Diet,surv) %>%
   summarise_at(c("time", "std.err", "lower", "upper"), mean, na.rm = TRUE)
 
@@ -181,67 +273,6 @@ ggsave(jx,file = "~/MyGithub/early_experience/plots/Quantplots_thumbnail.pdf",
 
 ```
 ###################
-
-```{r}
-mf <- survfit(Surv(age, status) ~ larvalTreat + adultTreat + sex,
-                   conf.type = "log", 
-                   conf.int = 0.95,
-                   type = "kaplan-meier",
-                   error = "greenwood",
-                   data = eelife)
-#summary(mf)
-summary(mf)$table[, "median"]
-sum_survfit <- surv_summary(mf, data = eelife)
-
-write.csv(sum_survfit, 
-          file = "../processed/SummarySurvModel_larvAdulSex.csv",
-          row.names = FALSE) 
-
-# Write quantiles
-write.csv(quantile(mf, probs = c(0.25, 0.5, 0.75)), 
-          file = "../processed/quantiles.csv")
-
-# OkabeIto palette in Hex: "#000000","#E69F00","#56B4E9",
-# "#009E73", #F0E442","#0072B2","#D55E00","#CC79A7"
-
-mf.plot <- ggsurvplot(mf, data = eelife, 
-                     conf.int = FALSE,
-                     break.time.by = 30,
-                     #palette = "palette_OkabeIto",
-                     palette = c("#000000", "#E69F00", "#56B4E9", "#009E73", 
-                       "#F0E442", "#0072B2", "#D55E00", "#CC79A7"),
-                     fun = "pct", 
-                     surv.median.line = "hv",
-                     fontsize = 3.5,
-                     #font.x = 12,
-                     #font.y = 12,
-                     # font.tickslab = 11,
-                     font.main = 12,
-                     legend = c(0.9, 0.6),
-                     risk.table = TRUE,
-                     risk.table.col = "strata",
-                     risk.table.fontsize = 3.5,
-                     tables.height = 0.35,
-                     #tables.theme = theme_cleantable(),
-                    # title = "Females & Males",
-                     legend.labs = c("C-C-F","C-C-M",
-                                     "C-DR-F","C-DR-M",
-                                     "DR-C-F","DR-C-M",
-                                     "DR-DR-F","DR-DR-M"),
-                     legend.title = "Diet-Sex \n combination") +
-                     guides(colour = guide_legend(nrow = 8)) +
-                     xlab("Age (days)")
-mf.plot
-
-
-ggsave(filename = "~/MyGithub/early_experience/plots/SurvPlots_for_fullModel_with_RiskTable_Sex.png", last_plot(),device = "png")
-
-# Test significance
-survdiff(Surv(age) ~larvalTreat+adultTreat+sex,
-                     data = eelife, rho = 0) 
-
-quantile(mf,  probs = c(0.1, 0.5, 0.9))
-```
 
 # EarlyRich (C diet) 
 
