--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -296,6 +296,7 @@ erf.plot <- ggsurvplot(erf, data = earlyRichF,
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
+                     pval = TRUE,
                      surv.median.line = "hv",
                      font.x = 10,
                      font.y = 10,
@@ -340,6 +341,7 @@ erm.plot <- ggsurvplot(erm, data = earlyRichM,
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
+                     pval = TRUE,
                      surv.median.line = "hv",
                      font.x = 10,
                      font.y = 10,
@@ -380,6 +382,7 @@ epf.plot <- ggsurvplot(epf, data = earlyPoorF,
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
+                     pval = TRUE,
                      surv.median.line = "hv",
                      font.x = 10,
                      font.y = 10,
@@ -423,6 +426,7 @@ epm.plot <- ggsurvplot(epm, data = earlyPoorM,
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
+                     pval = TRUE,
                      surv.median.line = "hv",
                      font.x = 10,
                      font.y = 10,
@@ -430,6 +434,9 @@ epm.plot <- ggsurvplot(epm, data = earlyPoorM,
                      font.main = 10,
                      risk.table = FALSE,
                      legend="none",
+                     risk.table.pos = "in",      
+                     ggtheme = theme_classic2(base_family = "Arial"),
+                     font.family = "Arial", 
                      # legend = c(0.9, 0.8),                     
                      # legend.labs = c("C", "DR"),
                      # legend.title = "Adult Diet",
@@ -460,7 +467,7 @@ splots_out <- arrange_ggsurvplots(
 
 ggsave(
   splots_out,
-  file = "~/MyGithub/early_experience/plots/SurvPlots_for_larvalDiet.pdf",
+  file = "~/MyGithub/early_experience/plots/SurvPlots_for_larvalDiet_new.pdf",
   width = 6,
   height = 5)
 ```
